# asm-cache-inject

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/asm/: fast_memcpy.rs  fence.rs  mod.rs  nontemporal.rs  prefetch.rs
src/bench/: mod.rs  random.rs  report.rs  runner.rs  sequential.rs
src/cache/: entry.rs  eviction.rs  lba_table.rs  mod.rs
src/cli/: args.rs  commands.rs  emit.rs  mod.rs
src/engine/: cache_engine.rs  config.rs  mod.rs  read_path.rs  write_path.rs
src/error/: mod.rs  types.rs
src/flush/: flusher.rs  mod.rs  scheduler.rs  sync.rs
src/io/: device.rs  device_info.rs  mod.rs  reader.rs  writer.rs
src/memory/: aligned_allocator.rs  block_buffer.rs  mod.rs  pool.rs
